--- a/EcommerceFullStackProject/views/partials/footer.pug
+++ b/EcommerceFullStackProject/views/partials/footer.pug
@@ -1,6 +1,6 @@
 ﻿footer.site-footer
   .footer-top.container
-    .footer-brand.footer-col
+    .footer-brand.footer-col(data-reveal="up")
       a.footer-logo(href="/") E-Shop
       p.footer-tagline
         | A clean full-stack ecommerce demo with bold visuals and dummy links
@@ -11,7 +11,7 @@
         a.social-link(href="/team" aria-label="Team") IN
         a.social-link(href="/contact" aria-label="Contact") FB
 
-    .footer-col
+    .footer-col(data-reveal="up" data-reveal-delay="60")
       h4.footer-title Company
       ul.footer-links
         li
@@ -25,7 +25,7 @@
         li
           a(href="/faqs") FAQs
 
-    .footer-col
+    .footer-col(data-reveal="up" data-reveal-delay="120")
       h4.footer-title Policy
       ul.footer-links
         li
@@ -37,7 +37,7 @@
         li
           a(href="/terms") Terms & Conditions
 
-    .footer-col
+    .footer-col(data-reveal="up" data-reveal-delay="180")
       h4.footer-title Categories
       ul.footer-links
         li
@@ -51,7 +51,7 @@
         li
           a(href="/shop?category=T-Shirts") T-Shirts
 
-    .footer-col.footer-address
+    .footer-col.footer-address(data-reveal="up" data-reveal-delay="240")
       h4.footer-title Address
       ul.footer-contact
         li
@@ -64,7 +64,7 @@
           span.contact-icon Phone
           a(href="tel:+13866883295") +1 (386) 688-3295
 
-  .footer-bottom
+  .footer-bottom(data-reveal="fade")
     .container.footer-bottom-inner
       p.footer-copy
         | © 2026 E-Shop - All Rights Reserved.
