--- a/EcommerceFullStackProject/views/admin/products/list.pug
+++ b/EcommerceFullStackProject/views/admin/products/list.pug
@@ -18,6 +18,7 @@ block content
             tr
               th Name
               th Category
+              th Model / SKU
               th Price
               th Stock
               th Actions
@@ -28,6 +29,11 @@ block content
                   strong= product.name
                 td
                   span.badge= product.category || 'N/A'
+                td
+                  | #{product.model || '-'}
+                  if product.sku
+                    br
+                    small.text-muted SKU: #{product.sku}
                 td $#{(product.price || 0).toFixed(2)}
                 td= product.stock || '-'
                 td
