Bust CSS cache and fix mobile product grid

--- a/EcommerceFullStackProject/views/admin/layout.pug
+++ b/EcommerceFullStackProject/views/admin/layout.pug
@@ -12,8 +12,8 @@ html(lang="en")
     // Favicon link
     link(rel="icon" href="/images/favicon.webp" type="image/x-icon")
     // Stylesheets
-    link(rel="stylesheet", href="/stylesheets/style.css")
-    link(rel="stylesheet", href="/stylesheets/responsive.css")
+    link(rel="stylesheet", href="/stylesheets/style.css?v=20260224-1")
+    link(rel="stylesheet", href="/stylesheets/responsive.css?v=20260224-1")
 
   body
     .admin-layout
